package id.ac.polban.employee.model;

public class EmploymentType {

    private String type;

    public EmploymentType(String type) {
        this.type = type;
    }

    public String getType() {
        return type;
    }
}
